Solved a layout issue

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -7,7 +7,7 @@
   margin-top: 3em;
   text-align: center;
   padding: 20px;
-  min-height: 335px !important;
+  min-height: 25em !important;
   background-color: #FF2968;
   overflow: hidden;
   border-radius: 8pt;
